# 100-Days-Of-AI-Engineering-Projects

./: README.md  utils.py
.specify/templates/: plan-template.md
Day 1-2/.ipynb_checkpoints/: NumPy_Mastery-checkpoint.md
Day 1-2/specs/numpy-mastery/: plan.md  tasks.md
Day 1-2/tests/: test_image_filters.py
Day 3-4/Pandas-Mastery-Project/: main.py  pyproject.toml  requirements.txt
Day 3-4/Pandas-Mastery-Project/notebooks/: COVID19_Analysis.ipynb
Day 3-4/specs/001-pandas-mastery/: data-model.md  quickstart.md  research.md  tasks_original.md
Day 5-6/: Data_Visualization_Mastery.md
Day 5-6/Data-Visualization-Mastery/: Titanic_EDA.py  main.py  pyproject.toml  visualization_gallery.py
Day 5-6/Day 5-6/Data-Visualization-Mastery/: main.py  pyproject.toml
Day 5-6/specs/001-data-viz-mastery/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
Day 7/: Mathematics_for_ML.md  README.md  pyproject.toml  utils.py
Day 7/.specify/memory/: constitution.md
Day 7/Mathematics-for-ML/: .coverage  optimization_analysis.md
Day 7/exercises/: gradient_descent_simple.py
Day 7/optimization/: gradient_descent.py
Day 7/tests/: conftest.py  test_optimization.py
data/: titanic.csv
week-1/Day 1-2/: IMPLEMENTATION_SUMMARY.md
week-1/Day 3-4/: Pandas_Mastery.md
week-1/Day 3-4/Pandas-Mastery-Project/: README.md  pyproject.toml  quickstart.md  validate_notebooks.py
week-1/Day 3-4/Pandas-Mastery-Project/.ipynb_checkpoints/: validate_structure-checkpoint.py
week-1/Day 3-4/Pandas-Mastery-Project/notebooks/: pandas_fundamentals.ipynb  real_dataset_analysis.ipynb
week-1/Day 3-4/Pandas-Mastery-Project/utils/: utils.py
week-1/Day 7/Mathematics-for-ML/: README.md  pyproject.toml
week-1/Day 7/Mathematics-for-ML/exercises/: gradient_descent_advanced.py  linear_algebra_exercises.py
week-1/Day 7/Mathematics-for-ML/linear_algebra/: matrices.py  operations.py
week-2/Day 8-9/: IMPLEMENTATION_SUMMARY.md  Supervised_Learning_Regression.md  requirements.txt
week-2/Day 8-9/src/: constants.py
(+96 files in other folders)
