[project]
name = "data-visualization-mastery"
version = "0.1.0"
description = "Data Visualization Mastery project with Titanic EDA"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "pandas>=1.4.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "kaleido>=0.2.0"
]
