[project]
name = "pandas-mastery-project"
version = "0.1.0"
description = "A comprehensive learning module for Pandas, covering foundational structures (DataFrames, Series), intermediate data cleaning, and advanced aggregation techniques."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "numpy>=1.21.0",
]
